--- a/Index.html
+++ b/Index.html
@@ -6,14 +6,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Estilos.css">
+  <link rel="icon" type="image/x-icon" href="/Imagenes/favicon (2).ico">
   <title>Glosario A-M</title>
 </head>
 
-<body bgcolor="lightblue">
-  <h1 id="indice" align="center">
-    <font color="green" size="14"><b>Glosario de terminos</b></font>
+<body>
+  <h1 id="indice">
+    <b>Glosario de terminos</b>
   </h1>
-  <div align="center">
+  <div class="indice">
     <a href="#A">A</a> |
     <a href="#B">B</a> |
     <a href="#C">C</a> |
@@ -44,52 +46,59 @@
   </div>
   <hr>
   <h2 id="A">
-    <font color="green" size="12">A</font>
+    A
   </h2>
   <dl>
     <dt> <b> Algoritmo </b>(<em>n. masc.</em>)</dt>
     <dd>Un algoritmo es cualquier procedimiento computacional bien definido que parte de un estado inicial y un valor o
       un conjunto de valores de entrada, a los cuales se les aplica una secuencia de pasos computacionales finitos,
       produciendo una salida o solución.</dd>
+    <img src="Imagenes/Algoritmo.png" alt="Algoritmo">
     <br>
     <dt> <b>Aplicación</b> (<em>n. fem.</em>)</dt>
     <dd>Programa que realiza una serie de funciones y con el cual trabajamos en el ordenador.</dd>
+    <img src="Imagenes/Aplicacion.png" alt="Aplicación">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="B">
-    <font color="green" size="12">B</font>
+    B
   </h2>
   <dl>
     <dt> <b> Base de datos </b>(<em>n. fem.</em>)</dt>
     <dd>Sistema de almacenamiento de datos muy flexible que permite organizar la información de forma muy eficiente.
+
     </dd>
+    <img src="Imagenes/BD.png" alt="Base de datos">
     <br>
     <dt> <b>Bit</b> (<em>n. masc.</em>)</dt>
     <dd>Unidad básica de información representada por ceros y unos que se van sucediendo para conformar los distintos
       significados.</dd>
+    <img src="Imagenes/Bit.png" alt="Bit">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="C">
-    <font color="green" size="12">C</font>
+    C
   </h2>
   <dl>
     <dt> <b> Comando </b>(<em>n. masc.</em>)</dt>
     <dd>
       Orden que se da al ordenador para ejecutar una función concreta o un programa.
     </dd>
+    <img src="Imagenes/comando.png" alt="Comando">
     <br>
     <dt> <b>CPU (Unidad Central de Proceso)</b> (<em>n. masc.</em>)</dt>
     <dd>
       Carcasa donde van montados los principales componentes del ordenador. Puede ser de sobremesa, minitorre, semitorre
       y torre.
     </dd>
+    <img src="Imagenes/CPU.png" alt="CPU">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="D">
-    <font color="green" size="12">D</font>
+    D
   </h2>
   <dl>
     <dt> <b> DNS </b>(<em>n. masc.</em>)</dt>
@@ -97,49 +106,55 @@
       Sistema de Nombres por Dominio utilizado en Internet y basado en una estructura jerárquica y mediante el cual
       comunicamos con otro ordenador que puede encontrarse en otra parte del mundo.
     </dd>
+    <img src="Imagenes/DNS.png" alt="DNS">
     <br>
     <dt> <b>Dominio</b> (<em>n. masc.</em>)</dt>
     <dd>
       Grupo de equipos conectados en red que comparten información y recursos.
     </dd>
+    <img src="Imagenes/DOMINIO.png" alt="Dominio">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="E">
-    <font color="green" size="12">E</font>
+    E
   </h2>
   <dl>
     <dt> <b> e-mail </b>(<em>n. masc.</em>)</dt>
     <dd>
       Nombre inglés que designa el correo electrónico.
     </dd>
+    <img src="Imagenes/EMAIL.png" alt="e-mail">
     <br>
     <dt> <b>Enlace</b> (<em>n. masc.</em>)</dt>
     <dd>
       Conexión de un documento de Internet con otro que figura resaltado de manera especial, también llamado
       Hipervínculo o Hiperenlace.
     </dd>
+    <img src="Imagenes/ENLACE.png" alt="Enlace">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="F">
-    <font color="green" size="12">F</font>
+    F
   </h2>
   <dl>
     <dt> <b> Firewall</b>(<em>n. masc.</em>)</dt>
     <dd>
       Dispositivos de seguridad a entradas no autorizadas.
     </dd>
+    <img src="Imagenes/firewall.png" alt="Firewall">
     <br>
     <dt> <b>Freeware</b> (<em>n. masc.</em>)</dt>
     <dd>
       De libre distribución para el usuario y no utilizable con fines comerciales.
     </dd>
+    <img src="Imagenes/freeware.png" alt="Freeware">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="G">
-    <font color="green" size="12">G</font>
+    G
   </h2>
   <dl>
     <dt> <b> Gateway</b>(<em>n. masc.</em>)</dt>
@@ -147,32 +162,36 @@
       Dispositivo que permite conectar entre sí dos redes normalmente de distinto protocolo o bien un servidor a una
       red.
     </dd>
+    <img src="Imagenes/gateway.png" alt="Gateway">
     <br>
     <dt> <b>Gigabyte (GB)</b> (<em>n. masc.</em>)</dt>
     <dd>
       Medida de 1.000 Mb (unos 1.000 millones de caracteres).
     </dd>
+    <img src="Imagenes/gb.png" alt="Gigabyte">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="H">
-    <font color="green" size="12">H</font>
+    H
   </h2>
   <dl>
     <dt> <b> HTML (Lenguaje de Marcas de Hipertexto)</b>(<em>n. masc.</em>)</dt>
     <dd>
       Lenguaje utilizado para crear páginas Web.
     </dd>
+    <img src="Imagenes/html.png" alt="HTML">
     <br>
     <dt> <b>HTTP</b> (<em>n. masc.</em>)</dt>
     <dd>
       Protocolo de Transferencia de Hipertexto o entorno gráfico de las páginas Web.
     </dd>
+    <img src="Imagenes/http.png" alt="HTTP">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="I">
-    <font color="green" size="12">I</font>
+    I
   </h2>
   <dl>
     <dt> <b> Internet</b>(<em>n. masc.</em>)</dt>
@@ -180,16 +199,18 @@
       Red de redes mundial. Telaraña o entramado mundial. También llamada World Wide Web (WWW), conjunto de redes que
       permiten la comunicación de millones de usuarios de todo el mundo.
     </dd>
+    <img src="Imagenes/internet.png" alt="Internet">
     <br>
     <dt> <b>IP</b> (<em>n. fem.</em>)</dt>
     <dd>
       Dirección numérica y única de cada ordenador en Internet.
     </dd>
+    <img src="Imagenes/ip.png" alt="IP">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="J">
-    <font color="green" size="12">J</font>
+    J
   </h2>
   <dl>
     <dt> <b> Java</b>(<em>n. masc.</em>)</dt>
@@ -198,6 +219,7 @@
       es independiente de la plataforma utilizada y está disponible para cualquier navegador de la WWW que admita este
       lenguaje.
     </dd>
+    <img src="Imagenes/java.png" alt="Java">
     <br>
     <dt> <b>JPEG (Joined Graphics Expert Group)</b> (<em>n. masc.</em>)</dt>
     <dd>
@@ -209,11 +231,12 @@
       tres
       veces queda inservible.
     </dd>
+    <img src="Imagenes/jpeg.png" alt="JPEG">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="K">
-    <font color="green" size="12">K</font>
+    K
   </h2>
   <dl>
     <dt> <b> Kernel</b>(<em>n. masc.</em>)</dt>
@@ -222,48 +245,54 @@
       el
       hardware, para la entrada y salida de datos, etc.
     </dd>
+    <img src="Imagenes/kernel.png" alt="Kernel">
     <br>
     <dt> <b>Kilobyte (Kb)</b> (<em>n. masc.</em>)</dt>
     <dd>
       Medida que equivale a 1.000 bytes, aproximadamente mil caracteres.
     </dd>
+    <img src="Imagenes/kb.png" alt="Kilobyte">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="L">
-    <font color="green" size="12">L</font>
+    L
   </h2>
   <dl>
     <dt> <b> LAN (Red de Area Local)</b>(<em>n. fem.</em>)</dt>
     <dd>
       Grupo de equipos conectados en la misma ubicación.
     </dd>
+    <img src="Imagenes/lan.png" alt="LAN">
     <br>
     <dt> <b>Link</b> (<em>n. masc.</em>)</dt>
     <dd>
       Cada uno de los enlaces de un módulo con las librerías que utiliza. En Internet, conexión de un documento con otro
       mediante un clic sobre un texto marcado o un icono o imagen.
     </dd>
+    <img src="Imagenes/link.png" alt="Link">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="M">
-    <font color="green" size="12">M</font>
+    M
   </h2>
   <dl>
     <dt> <b>Megabyte (Mb)</b>(<em>n. masc.</em>)</dt>
     <dd>
       Medida que equivale a 1.000 Kb, aproximadamente un millón de caracteres.
     </dd>
+    <img src="Imagenes/mb.png" alt="Megabyte">
     <br>
     <dt> <b>Multimedia</b> (<em>n. masc.</em>)</dt>
     <dd>
       Cualquier combinación de texto, imágenes, sonido y vídeo.
     </dd>
+    <img src="Imagenes/multimedia.png" alt="Multimedia">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
-  <div align="center">
+  <div class="indice">
     <a href="">1</a> |
     <a href="n-z.html">2</a>
   </div>
