--- a/n-z.html
+++ b/n-z.html
@@ -5,14 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Estilos.css">
+  <link rel="icon" type="image/x-icon" href="/Imagenes/favicon (2).ico">
   <title>Glosario N-Z</title>
 </head>
 
-<body bgcolor="lightblue">
-  <h1 id="indice" align="center">
-    <font color="green" size="14"><b>Glosario de terminos</b></font>
+<body>
+  <h1 id="indice">
+    <b>Glosario de terminos</b>
   </h1>
-  <div align="center">
+  <div class="indice">
     <a href="Index.html#A">A</a> |
     <a href="Index.html#B">B</a> |
     <a href="Index.html#C">C</a> |
@@ -43,39 +45,44 @@
   </div>
   <hr>
   <h2 id="N">
-    <font color="green" size="12">N</font>
+    N
   </h2>
   <dl>
     <dt> <b> Navegador </b>(<em>n. masc.</em>)</dt>
     <dd>Programa utilizado para acceder a los documentos almacenados en Internet.</dd>
+    <img src="Imagenes/navegador.png" alt="Navegador">
     <br>
     <dt> <b>NFR</b> (<em>n. fem.</em>)</dt>
     <dd>Versiones para su no-venta.</dd>
+    <img src="Imagenes/nfr.png" alt="NFR">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="O">
-    <font color="green" size="12">O</font>
+    O
   </h2>
   <dl>
     <dt> <b> On-line </b>(<em>n. masc.</em>)</dt>
     <dd>
       Conexiones a la red donde las respuestas del sistema se generan de forma casi inmediata.
     </dd>
+    <img src="Imagenes/online.png" alt="On-line">
     <br>
     <dt> <b>OpenGL</b> (<em>n. fem.</em>)</dt>
     <dd>Librería de funciones gráficas avanzadas desarrollada por Silicon Graphics.</dd>
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <img src="Imagenes/opengl.png" alt="OpenGL">
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="P">
-    <font color="green" size="12">P</font>
+    P
   </h2>
   <dl>
     <dt> <b> Página Web </b>(<em>n. fem.</em>)</dt>
     <dd>
       Documento realizado en HTML y que es parte de un sitio Web.
     </dd>
+    <img src="Imagenes/pagina.png" alt="Página web">
     <br>
     <dt> <b>Plug-ins</b> (<em>n. masc.</em>)</dt>
     <dd>
@@ -83,60 +90,67 @@
       y que
       funcionan sincronizadamente con el navegador.
     </dd>
+    <img src="Imagenes/plugins.png" alt="Plug-ins">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="Q">
-    <font color="green" size="12">Q</font>
+    Q
   </h2>
   <dl>
     <dt> <b> QuickTime </b>(<em>n. fem.</em>)</dt>
     <dd>
       Tecnología de reproducción de ficheros de vídeo desarrollada por Apple.
     </dd>
+    <img src="Imagenes/quicktime.png" alt="QuickTime">
     <br>
     <dt> <b>Quote</b> (<em>n. masc.</em>)</dt>
     <dd>
       Término que designa a los fragmentos de texto o anotaciones del correo electrónico que sirven de recordatorio al
       destinatario cuando se le responde un mensaje.
     </dd>
+    <img src="Imagenes/quote.png" alt="Quote">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="R">
-    <font color="green" size="12">R</font>
+    R
   </h2>
   <dl>
     <dt> <b> RAM (Random Access Memory) </b>(<em>n. fem.</em>)</dt>
     <dd>
       Memoria de Acceso Aleatorio que mantiene vivos los datos hasta que se desconecta el ordenador.
     </dd>
+    <img src="Imagenes/ram.png" alt="RAM">
     <br>
     <dt> <b>Red</b> (<em>n. fem.</em>)</dt>
     <dd>
       Dos o más equipos conectados entre sí.
     </dd>
+    <img src="Imagenes/red.png" alt="Red">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="S">
-    <font color="green" size="12">S</font>
+    S
   </h2>
   <dl>
     <dt> <b> Scripts </b>(<em>n. masc.</em>)</dt>
     <dd>
       Conjunto de instrucciones que se ejecutan como una macro.
     </dd>
+    <img src="Imagenes/script.png" alt="Scripts">
     <br>
     <dt> <b>Servidor</b> (<em>n. masc.</em>)</dt>
     <dd>
       Equipo que controla el acceso de los usuarios a una red y les da servicio e información.
     </dd>
+    <img src="Imagenes/servidor.png" alt="Servidor">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="T">
-    <font color="green" size="12">T</font>
+    T
   </h2>
   <dl>
     <dt> <b> TCP/IP </b>(<em>n. masc.</em>)</dt>
@@ -145,38 +159,43 @@
       los
       datos en Internet para que todos los sistemas hablen el mismo idioma en Internet.
     </dd>
+    <img src="Imagenes/tcp.png" alt="TCP/IP">
     <br>
     <dt> <b>Terabyte</b> (<em>n. masc.</em>)</dt>
     <dd>
       Unidad de almacenamiento futura, equivalente a más de un trillón de bytes.
     </dd>
+    <img src="Imagenes/tb.png" alt="Terabyte">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="U">
-    <font color="green" size="12">U</font>
+    U
   </h2>
   <dl>
     <dt> <b> URL</b>(<em>n. masc.</em>)</dt>
     <dd>
       Localizador Uniforme de Recurso, dícese de la dirección de una página Web de Internet.
     </dd>
+    <img src="Imagenes/url.png" alt="URL">
     <br>
     <dt> <b>USB (Universal Serial Bus)</b> (<em>n. masc.</em>)</dt>
     <dd>
       Conector de dispositivos externos que hace de vía de ampliación de los nuevos ordenadores.
     </dd>
+    <img src="Imagenes/usb.png" alt="USB">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="V">
-    <font color="green" size="12">V</font>
+    V
   </h2>
   <dl>
     <dt> <b> Ventana</b>(<em>n. fem.</em>)</dt>
     <dd>
       Forma rectangular que aparece en la pantalla y representa a una carpeta, una aplicación, un elemento.
     </dd>
+    <img src="Imagenes/ventana.png" alt="Ventana">
     <br>
     <dt> <b>Vínculo</b> (<em>n. masc.</em>)</dt>
     <dd>
@@ -184,11 +203,12 @@
       página Web
       en Internet.
     </dd>
+    <img src="Imagenes/vinculo.png" alt="Vínculo">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="W">
-    <font color="green" size="12">W</font>
+    W
   </h2>
   <dl>
     <dt> <b> Web</b>(<em>n. fem.</em>)</dt>
@@ -196,22 +216,25 @@
       World Wide Web, Internet. Zona gráfica compuesta por millones de páginas Web y a la cual accedemos por medio de un
       navegador.
     </dd>
+    <img src="Imagenes/web.png" alt="web">
     <br>
     <dt> <b>Webmaster</b> (<em>n. masc.</em>)</dt>
     <dd>
       Persona encargada de administrar una Web.
     </dd>
+    <img src="Imagenes/webmaster.png" alt="Webmaster">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="X">
-    <font color="green" size="12">X</font>
+    X
   </h2>
   <dl>
     <dt> <b> Xenix</b>(<em>n. masc.</em>)</dt>
     <dd>
       Sistema operativo desarrollado por Microsoft de acuerdo a las especificaciones Unix.
     </dd>
+    <img src="Imagenes/xenix.webp" alt="Xenix">
     <br>
     <dt> <b>XSP</b> (<em>n. masc.</em>)</dt>
     <dd>
@@ -221,16 +244,17 @@
       dinámicos en XML.
     </dd>
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="Y">
-    <font color="green" size="12">Y</font>
+    Y
   </h2>
   <dl>
     <dt> <b> Yahoo!</b>(<em>n. masc.</em>)</dt>
     <dd>
       Portal más popular de Internet que permite la búsqueda de páginas Web por criterios o contenidos.
     </dd>
+    <img src="Imagenes/yahoo.png" alt="Yahoo">
     <br>
     <dt> <b>Yottabyte</b> (<em>n. masc.</em>)</dt>
     <dd>
@@ -238,25 +262,27 @@
       (1.000.000.000.000.000.000.000.000) bytes. Un yottabyte es igual a 1024 zettabytes.
     </dd>
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
   <h2 id="Z">
-    <font color="green" size="12">Z</font>
+    Z
   </h2>
   <dl>
     <dt> <b> ZIP</b>(<em>n. masc.</em>)</dt>
     <dd>
       Dispositivo de almacenamiento magnético cuyos cartuchos pueden guardar hasta 250 Mb.
     </dd>
+    <img src="Imagenes/zip.jpg" alt="ZIP">
     <br>
     <dt> <b>Zócalo</b> (<em>n. masc.</em>)</dt>
     <dd>
       Hueco o lugar de la placa base donde se insertan en microprocesador, las memorias u otros chips.
     </dd>
+    <img src="Imagenes/zocalo.jpg" alt="Zócalo">
   </dl>
-  <div align="right"><a href="#indice">Indice🔺</a></div>
+  <div class="volver"><a href="#indice">Indice🔺</a></div>
   <hr>
-  <div align="center">
+  <div class="indice">
     <a href="Index.html">1</a> |
     <a href="">2</a>
   </div>
